--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
+		"@material/typography": "^14.0.0",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
 		"@smui/card": "^7.0.0-beta.0",
