--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+      - /app/src
+    networks:
+      - app_network
     depends_on:
       - db
 
@@ -28,6 +31,11 @@ services:
       - "5434:5436"
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+    networks:
+      - app_network
 
 volumes:
   pgdata:
+
+networks:
+  app_network:
