--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   app:
-    build: .
+    build:
+      context: .
     ports:
       - '3000:3000'
     environment:
@@ -10,11 +11,12 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=myapp
+      - NODE_ENV=development
     command: npm run start:dev
     volumes:
       - .:/app
-      - /app/node_modules
-      - /app/src
+      - /node_modules
+      - /src
     networks:
       - app_network
     depends_on:
