--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
 		"@material/typography": "^14.0.0",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
+		"@smui-extra/accordion": "^7.0.0-beta.0",
 		"@smui/card": "^7.0.0-beta.0",
+		"@smui/checkbox": "^7.0.0-beta.0",
 		"@smui/icon-button": "^7.0.0-beta.0",
 		"@smui/textfield": "^7.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
